# cpplrn

./: .gitignore  CMakeLists.txt  README.md
include/: header.h  print.h
src/: main.cpp  myfunc.cpp  sum.c
